# syncthing_ctl

./: Cargo.toml  README.md
src/: main.rs
